[package]
name = "accelmars-resolver-env"
version = "0.1.0"
edition = "2021"
description = "Env-var schema and typed reader for AccelMars workspace resolver"
license = "Apache-2.0"

[lib]
name = "accelmars_resolver_env"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
