[package]
name = "accelmars-resolver-env"
version = "0.1.1"
edition = "2021"
description = "Env-var schema and typed reader for AccelMars workspace resolver"
license = "Apache-2.0"
repository = "https://github.com/accelmars/resolver-env"
homepage = "https://github.com/accelmars/resolver-env"
documentation = "https://docs.rs/accelmars-resolver-env"
readme = "README.md"
keywords = ["workspace", "resolver", "environment", "accelmars", "multitenant"]
categories = ["config", "development-tools"]

[lib]
name = "accelmars_resolver_env"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
